new feature add

--- a/index.html
+++ b/index.html
@@ -47,19 +47,24 @@
         <a href="mailto:contact@thedevops.store" class="cta-btn">Join Now</a>
     </section>
 
-    <!-- Contact Section -->
-    <section id="contact">
-        <h2>Contact Us</h2>
-        <p>24x7 Ambulance Service – Gurgaon</p>
-        <p>📞 Call / WhatsApp: +91 9999XXXXXX</p>
-        <p>🌐 Website: <a href="https://thedevops.store">thedevops.store</a></p>
+<!-- Contact Section -->
+    <section id="contact" style="background-color:#f8f9fa; padding:40px 20px; text-align:center; border-radius:12px; box-shadow:0 4px 8px rgba(0,0,0,0.1); margin:40px 0;">
+        <h2 style="color:#d9534f; font-size:2em; margin-bottom:10px;">📞 24x7 Ambulance Helpline</h2>
+        <p style="font-size:1.1em; margin-bottom:20px; color:#333;">Fast, Safe & Reliable Ambulance Service – Available Across Gurgaon</p>
+
+        <div style="font-size:1.2em; line-height:1.8; color:#222;">
+            <strong>📱 Call or WhatsApp:</strong>
+            <a href="https://wa.me/916386975769" target="_blank" style="color:#007bff; text-decoration:none;">+91 63869 75769</a><br>
+            <strong>🌐 Website:</strong>
+            <a href="https://thedevops.store" target="_blank" style="color:#007bff; text-decoration:none;">thedevops.store</a><br>
+            <strong>📍 Location:</strong> Gurgaon, Haryana
+        </div>
+
+        <div style="margin-top:25px;">
+            <a href="tel:+916386975769" style="background:#d9534f; color:#fff; padding:12px 25px; border-radius:8px; text-decoration:none; font-weight:bold;">🚑 Call Now</a>
+        </div>
+
+        <p style="margin-top:20px; font-size:0.9em; color:#555;">
+            ✅ Certified Emergency Partner | 🚑 ICU & Basic Ambulance | ⏱️ Response within 10 mins
+        </p>
     </section>
-
-    <!-- Footer -->
-    <footer>
-        <p>© 2025 AmbuSure Ambulance Service. All Rights Reserved.</p>
-    </footer>
-
-    <script src="script.js"></script>
-</body>
-</html>
