added picture soruce in html

--- a/ambulance-website/index.html
+++ b/ambulance-website/index.html
@@ -8,14 +8,20 @@
 </head>
 <body>
     <!-- Header / Hero -->
-    <header>
-        <div class="container">
-            <img src="images/logo.png" alt="AmbuSure Logo" class="logo">
-            <h1>AmbuSure Ambulance Services – 24x7 Gurgaon</h1>
-            <p>Fast, Reliable, and Trusted Ambulance Service</p>
-            <a href="tel:+919999XXXXXX" class="cta-btn">Call Now</a>
-        </div>
-    </header>
+<header>
+    <div class="container">
+        <img src="images/logo.png" alt="AmbuSure Logo" class="logo">
+        <h1>AmbuSure Ambulance Services – 24x7 Gurgaon</h1>
+        <p>Fast, Reliable, and Trusted Ambulance Service</p>
+        <a href="tel:+919999XXXXXX" class="cta-btn">Call Now</a>
+    </div>
+</header>
+
+<!-- 🚑 Hero Ambulance Image -->
+<section id="hero-image" style="text-align:center; margin:30px 0;">
+    <img src="images/ambulance1.jpg" alt="AmbuSure Ambulance" 
+         style="width:90%; max-width:800px; border-radius:12px; box-shadow:0 4px 10px rgba(0,0,0,0.2);">
+</section>
 
     <!-- Services Section -->
     <section id="services">
