--- a/ambulance-website/index.html
+++ b/ambulance-website/index.html
@@ -19,7 +19,7 @@
 
 <!-- 🚑 Hero Ambulance Image -->
 <section id="hero-image" style="text-align:center; margin:30px 0;">
-    <img src="images/ambulance1.jpg" alt="AmbuSure Ambulance" 
+    <img src="images/Ambulance.jpg" alt="AmbuSure Ambulance"
          style="width:90%; max-width:800px; border-radius:12px; box-shadow:0 4px 10px rgba(0,0,0,0.2);">
 </section>
 
